# ec2-ssh

ec2-ssh/: Makefile  README.md  pyproject.toml  requirements_dev.txt  sonar-project.properties  tox.ini
ec2-ssh/ec2_ssh/: __init__.py  cli.py  ec2_ssh.py
ec2-ssh/ec2_ssh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ec2-ssh/reports/: tests.xml
ec2-ssh/tests/: __init__.py  test_cli.py  test_ec2_ssh.py
